# CloneSpace

./: .gitignore  README.md  split_config.armeabi_v7a.apk  split_config.en.apk  split_config.xxhdpi.apk
EchoZone/: fix_colors.py  gradle.properties  settings.gradle.kts
EchoZone/app/: build.gradle.kts
EchoZone/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
EchoZone/app/src/main/cpp/xhook/: xh_util.c
base/: AndroidManifest.xml  apktool.yml
base/assets/mgt_unpacked/: AndroidManifest.xml  apktool.yml
base/original/: AndroidManifest.xml
base/res/drawable/: bg_add_app.xml  bg_app_pop.xml  bg_btn_gray.xml  bg_f6fbff_r12.xml  bg_gradient.xml  bg_primary_r12.xml  bg_white_r12.xml  ic_action_clear.xml  ic_action_edit.xml  ic_action_edit_down.xml  ic_action_more.xml  ic_action_qrcode.xml  ic_action_search.xml  ic_action_search_space.xml  ic_action_search_space_down.xml  ic_action_stop_all.xml  ic_add_app.xml  ic_app_background.xml  ic_checked_icon.xml  ic_checked_selected.xml  ic_checked_selector.xml  ic_checked_unselected.xml  ic_connect_email.xml  ic_connect_group.xml  ic_default.xml  ic_edit.xml  ic_empty_apps.xml  ic_forward.xml  ic_privacy.xml  ic_qrcode_scanline.xml  ic_remove_space.xml  ic_share_me.xml  ic_terms_os_user.xml  ic_update_self.xml  ic_version.xml
base/res/layout/: action_item.xml  activity_apps.xml  activity_dispatch.xml  activity_force_update.xml  activity_home.xml  activity_qr_code_history.xml  activity_qrcode.xml  android_resolver_list.xml  app_banner.xml  app_installed_item.xml  (+15 more)
decompiled_java/resources/: AndroidManifest.xml  classes.dex
(+9664 files in other folders)
